platform/services/rabbitmq/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-admin
  namespace: rabbitmq
  annotations:
    cert-manager.io/cluster-issuer: step-ca-int-acme
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - rabbitmq-dev.int.aethericforge.ca
      secretName: rabbitmq-admin-tls

  rules:
    - host: rabbitmq-dev.int.aethericforge.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
